docs(web-components): adding code links for web components

--- a/src/pages/components/breadcrumb/code.mdx
+++ b/src/pages/components/breadcrumb/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -68,6 +78,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}>{`
 <Breadcrumb noTrailingSlash>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
@@ -85,6 +96,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}>{`
 <Breadcrumb>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
