--- a/src/pages/components/pagination/code.mdx
+++ b/src/pages/components/pagination/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -75,6 +85,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
     }}>{`
   <div style={{width: '800px'}}>
     <Pagination
