--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -46,6 +46,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -68,6 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}>{`
 <fieldset className="bx--fieldset">
   <legend className="bx--label">Checkbox heading</legend>
