--- a/src/pages/components/date-picker/code.mdx
+++ b/src/pages/components/date-picker/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -84,6 +94,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="simple">
       <DatePickerInput
@@ -108,6 +119,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="single">
       <DatePickerInput
@@ -132,6 +144,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="range">
       <DatePickerInput
@@ -161,6 +174,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}>{`
     <TimePicker id="time-picker">
       <TimePickerSelect id="time-picker-select-1">
