--- a/src/pages/components/list/code.mdx
+++ b/src/pages/components/list/code.mdx
@@ -45,6 +45,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -70,6 +80,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
     }}>{`
     <OrderedList>
       <ListItem>
