--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -46,6 +46,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-modal--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -82,6 +92,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
