--- a/src/pages/components/notification/code.mdx
+++ b/src/pages/components/notification/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -74,6 +84,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
     }}>{`
     <div>
       <ToastNotification
@@ -98,6 +109,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
     }}>{`
   <div>
     <InlineNotification
