--- a/src/pages/components/select/code.mdx
+++ b/src/pages/components/select/code.mdx
@@ -46,6 +46,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-select--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -72,6 +82,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
     }}>{`
 <Select
   defaultValue="placeholder-item"
