--- a/src/pages/components/toggle/code.mdx
+++ b/src/pages/components/toggle/code.mdx
@@ -46,6 +46,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -71,6 +81,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <Toggle
       aria-label="toggle button"
@@ -89,6 +100,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
+      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <ToggleSmall
       aria-label="toggle button"
