fix(components): fixing quotes for web components

--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -82,7 +82,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
     }}>
     {`
   <Accordion>
