--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -91,7 +91,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button>Button</Button>
     `}</ComponentVariant>
@@ -108,7 +108,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
@@ -125,7 +125,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button
         hasIconOnly
