--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}>{`
 <fieldset className="bx--fieldset">
   <legend className="bx--label">Checkbox heading</legend>
