--- a/src/pages/components/code-snippet/code.mdx
+++ b/src/pages/components/code-snippet/code.mdx
@@ -92,7 +92,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}>{`
     <CodeSnippet type="single">
     ${codeSnippetSingle}
@@ -109,7 +109,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}>{`
     <CodeSnippet type="multi">
     ${codeSnippet}
@@ -126,7 +126,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}>{`
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
