--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -95,7 +95,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
     }}>{`
     <Dropdown
       ariaLabel="Dropdown"
@@ -118,7 +118,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
     }}>{`
     <ComboBox
       ariaLabel="ComboBox"
@@ -141,7 +141,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect
       ariaLabel="MultiSelect"
@@ -161,7 +161,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
