--- a/src/pages/components/form/code.mdx
+++ b/src/pages/components/form/code.mdx
@@ -83,7 +83,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
     }}>{`
   <Form>
   <div style={{marginBottom: '2rem'}}>
