--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -79,7 +79,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
     }}>{`
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
