--- a/src/pages/components/list/code.mdx
+++ b/src/pages/components/list/code.mdx
@@ -80,7 +80,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
     }}>{`
     <OrderedList>
       <ListItem>
