--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -92,7 +92,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
