--- a/src/pages/components/notification/code.mdx
+++ b/src/pages/components/notification/code.mdx
@@ -84,7 +84,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
     }}>{`
     <div>
       <ToastNotification
@@ -109,7 +109,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
     }}>{`
   <div>
     <InlineNotification
