--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -81,7 +81,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
     <NumberInput
       helperText="Optional helper text"
@@ -104,7 +104,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
         <NumberInput
           isMobile
