--- a/src/pages/components/progress-indicator/code.mdx
+++ b/src/pages/components/progress-indicator/code.mdx
@@ -83,7 +83,7 @@ code usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=progress-indicator',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
     }}>{`
   <div className="some-container">
     <ProgressIndicator currentIndex={1}>
