--- a/src/pages/components/radio-button/code.mdx
+++ b/src/pages/components/radio-button/code.mdx
@@ -80,7 +80,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=radio-button',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
     }}>{`
   <FormGroup
   legendText="Radio button heading"
