--- a/src/pages/components/search/code.mdx
+++ b/src/pages/components/search/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=search',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
     }}>{`
 <Search
   id="search-1"
