--- a/src/pages/components/slider/code.mdx
+++ b/src/pages/components/slider/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvslider--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=slider',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
     }}>{`
   <div className="some-container">
 <Slider
