--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -84,7 +84,7 @@ code usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
@@ -139,7 +139,7 @@ code usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
