--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -77,7 +77,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}>{`
 <div style={{ width: '50%' }}>
   <Tabs scrollIntoView={false}>
