--- a/src/pages/components/tag/code.mdx
+++ b/src/pages/components/tag/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tag',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
     }}>{`
   <>
 <Tag type="red" title="Clear Filter"> Red </Tag>
