--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -88,7 +88,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
       <TextInput
@@ -110,7 +110,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
     <TextInput.PasswordInput
@@ -137,7 +137,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
     }}>{`
     <div>
     <TextArea
