--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -96,7 +96,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
     }}>{`
     <Tile>
       Default tile
@@ -115,7 +115,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
     }}>{`
     <ClickableTile
       href="#"
@@ -136,7 +136,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <TileGroup
       defaultSelected="default-selected"
@@ -182,7 +182,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <div
       aria-label="selectable tiles"
@@ -230,7 +230,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
     }}>{`
     <ExpandableTile
       tabIndex={0}
