--- a/src/pages/components/toggle/code.mdx
+++ b/src/pages/components/toggle/code.mdx
@@ -81,7 +81,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <Toggle
       aria-label="toggle button"
@@ -100,7 +100,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <ToggleSmall
       aria-label="toggle button"
