--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -88,7 +88,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
     }}>{`
     <Tooltip
       direction="bottom"
@@ -119,7 +119,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
     }}>{`
     <TooltipIcon
       tooltipText="Filter"
@@ -140,7 +140,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
     }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
