--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -98,7 +98,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
@@ -138,7 +138,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
@@ -187,7 +187,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
     }}>
     {`<DataTable
   rows={rowData}
@@ -236,7 +236,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
