--- a/src/pages/components/file-uploader/code.mdx
+++ b/src/pages/components/file-uploader/code.mdx
@@ -88,7 +88,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <FileUploader
@@ -118,7 +118,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <strong className='bx--file--label'>Account photo</strong>
@@ -148,7 +148,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <FileUploaderItem name='color.jpg' errorSubject='File size exceeds limits' errorBody='500 kb max file size. Select a new file and try again.'/>
