--- a/src/pages/components/link/code.mdx
+++ b/src/pages/components/link/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
     }}>{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
