--- a/src/pages/components/loading/code.mdx
+++ b/src/pages/components/loading/code.mdx
@@ -78,7 +78,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
     }}>{`
     <Loading
       description="Active loading indicator" withOverlay={false}
