--- a/src/pages/components/pagination/code.mdx
+++ b/src/pages/components/pagination/code.mdx
@@ -85,7 +85,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
     }}>{`
   <div style={{width: '800px'}}>
     <Pagination
