--- a/src/pages/components/select/code.mdx
+++ b/src/pages/components/select/code.mdx
@@ -82,7 +82,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
-      Web Components: 'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
     }}>{`
 <Select
   defaultValue="placeholder-item"
